# MegaCityCode

./: .clang-uml  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  GEMINI.md  README.md  build_docs.py  do.py  do_review.py  rpc-test-output.txt
.github/workflows/: build.yml
.obsidian/: workspace.json
app/: app.cpp  app.h  app_config.cpp  app_config.h  cursor_blinker.cpp  cursor_blinker.h  grid_rendering_pipeline.cpp  grid_rendering_pipeline.h  main.cpp  render_test.cpp  render_test.h  toml_util.h  ui_request_worker.cpp  ui_request_worker.h
cmake/: CompileShaders.cmake  CompileShaders_Metal.cmake  FetchDependencies.cmake
docs/: learnings.md  module-map.md
docs/api/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  app_8h.html  app_8h.js  app_8h__dep__incl.map  app_8h__dep__incl.md5  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  app__config_8h.html  app__config_8h.js  app__config_8h__dep__incl.map  app__config_8h__dep__incl.md5  app__config_8h__incl.map  app__config_8h__incl.md5  app__config_8h_source.html  classes.html  classspectre_1_1_app-members.html  classspectre_1_1_app.html  classspectre_1_1_app.js  classspectre_1_1_app__coll__graph.map  classspectre_1_1_app__coll__graph.md5  classspectre_1_1_font_manager-members.html  classspectre_1_1_font_manager.html  classspectre_1_1_font_manager.js  classspectre_1_1_font_manager__coll__graph.map  classspectre_1_1_font_manager__coll__graph.md5  classspectre_1_1_glyph_cache-members.html  classspectre_1_1_glyph_cache.html  classspectre_1_1_glyph_cache.js  classspectre_1_1_glyph_cache__coll__graph.map  classspectre_1_1_glyph_cache__coll__graph.md5  classspectre_1_1_grid-members.html  classspectre_1_1_grid.html  classspectre_1_1_grid.js  classspectre_1_1_grid__inherit__graph.map  classspectre_1_1_grid__inherit__graph.md5  classspectre_1_1_grid_rendering_pipeline-members.html  classspectre_1_1_grid_rendering_pipeline.html  (+798 more)
docs/api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  (+86 more)
docs/doxygen/: custom.css
docs/uml/: megacitycode_classes.puml  spectre_classes.puml
libs/megacitycode-font/: CMakeLists.txt
libs/megacitycode-font/src/: font_engine.h  font_manager.cpp  glyph_cache.cpp  text_service.cpp  text_shaper.cpp
libs/megacitycode-grid/: CMakeLists.txt
libs/megacitycode-grid/src/: grid.cpp
libs/megacitycode-renderer/: CMakeLists.txt
libs/megacitycode-types/: CMakeLists.txt
libs/megacitycode-window/: CMakeLists.txt
libs/megacitycode-window/include/megacitycode/: sdl_window.h  window.h
libs/megacitycode-window/src/: sdl_window.cpp
libs/spectre-font/: CMakeLists.txt
libs/spectre-nvim/: CMakeLists.txt
libs/spectre-renderer/: CMakeLists.txt
libs/spectre-types/: CMakeLists.txt
logs/: mac-log.txt
plans/.obsidian/: workspace.json
plans/design/: belt-and-braces.md
plans/prompts/: concensus_review.md  consensus_review.md  features.md  review.md  review_modular_agent.md
plans/reviews/: review-concensus.md  review-consensus.md  review-latest.claude.md  review-latest.gpt.md
plans/work-items/: 00 atlas recovery -bug.md  00 rpc transport serialization and shutdown hardening -bug.md  01 app loop and ui request decomposition -feature.md  01 vulkan robustness and upload path -bug.md  02 app lifecycle split and rollback -feature.md  02 render test extraction and parser unification -feature.md  03 public api boundary cleanup -feature.md  03 ui path rpc decoupling -bug.md  04 grid wide-cell repair and redraw robustness -bug.md  04 redraw completeness and dirty tracking -bug.md  05 font and shared api boundary cleanup -feature.md  05 vulkan robustness and atlas upload rework -bug.md  06 highlight fidelity -feature.md  06 test seam cleanup and lifecycle coverage -test.md  07 user configuration and font selection -feature.md  08 clipboard ime and title integration -feature.md  08 gui ergonomics and observability -feature.md  09 lifecycle and rendering regressions -test.md  10 clipboard provider integration -feature.md  index.md  review-consensus-execution.md
plans/work-items-complete/: 00 rpc transport serialization and shutdown hardening -bug.md  02 render test extraction and parser unification -feature.md  03 public api boundary cleanup -feature.md  05 vulkan robustness and atlas upload rework -bug.md  06 test seam cleanup and lifecycle coverage -test.md
scripts/: ask_agent.py  ask_agent_claude.py  ask_agent_gemini.py  ask_agent_gpt.py  build_docs.py  do_review.py  gen_api_docs.py  gen_deps.py  gen_uml.py  run_app.bat  run_app.sh  run_tests.bat  run_tests.sh  store_logs.sh  update_screenshot.py
shaders/: grid.metal  grid_bg.frag  grid_bg.vert  grid_fg.frag  grid_fg.vert  plane.frag  plane.vert
src/: app.cpp  app.h  main.cpp
src/font/: font_manager.cpp  font_manager.h  glyph_cache.cpp  glyph_cache.h  text_shaper.cpp  text_shaper.h
src/grid/: cell.h  grid.cpp  grid.h  highlight.h
src/nvim/: input.cpp  input.h  nvim_process.cpp  nvim_process.h  rpc.cpp  rpc.h  ui_events.cpp  ui_events.h
src/renderer/: renderer.h
src/window/: sdl_window.cpp  sdl_window.h  window.h
tests/: CMakeLists.txt  app_config_tests.cpp  cursor_blinker_tests.cpp  font_tests.cpp  grid_tests.cpp  highlight_tests.cpp  input_tests.cpp  log_tests.cpp  render_test_parser_tests.cpp  renderer_state_tests.cpp  rpc_codec_tests.cpp  rpc_fake_server.cpp  rpc_integration_tests.cpp  test_main.cpp  ui_events_tests.cpp  unicode_tests.cpp  vk_resource_helpers_tests.cpp
tests/render/: basic-view.toml  cmdline-view.toml  plane-view.toml  readme-hero.toml  readme-overlay.toml  readme-view.toml  unicode-view.toml
tests/support/: replay_fixture.h  test_support.h
(+91 files in other folders)
